--- a/transport/doc/FCT_notes/content/steadystate_FCT.tex
+++ b/transport/doc/FCT_notes/content/steadystate_FCT.tex
@@ -5,29 +5,27 @@
 \subsection{Steady-State FCT Scheme}
 %--------------------------------------------------------------------------------
 In this section, the general FCT scheme for the steady-state case is presented.
-The flux correction vector $\mathbf{f}$ is defined such that:
+The flux correction vector $\f$ is defined such that:
 \begin{equation}\label{ss_f}
-   \mathbf{A}^L\mathbf{U}^H = \mathbf{b} + \mathbf{f}.
+   \A^L\U^H = \b + \f \eqp
 \end{equation}
-Decomposing the correction flux into $\mathbf{F}$ and applying a limiter
-$\mathcal{L}$ gives
+Decomposing the correction flux into $\F$ and applying a limiter
+$\L$ gives
 \begin{equation}\label{FCT_limited_ss}
-   \mathbf{A}^L\mathbf{U}
-      = \mathbf{b} + \mathcal{L}[\mathbf{F}].
+   \A^L\U = \b + \LF \eqp
 \end{equation}
-where $(\mathcal{L}[\mathbf{F}])_i = \mathcal{L}_{i,:}F_{i,:}^T
-= \sum\limits_j \mathcal{L}_{i,j}F_{i,j}$ and $\mathbf{U}$
-is the FCT solution.  The limiter $\mathcal{L}$ is
+where $\LF$ denotes row-wise dot products: $(\LF)_i = L_{i,:}F_{i,:}^T
+= \sumj L\ij F\ij$ and $\U$ is the FCT solution.  The limiter $\L$ is
 defined in Section \ref{L}.
 
 Combining Equations \eqref{ss_f} and \eqref{steadystate_high}
-gives the definition of $\mathbf{f}$:
+gives the definition of $\f$:
 \begin{equation}
-   \mathbf{f} \equiv \left(\mathbf{D}^L-\mathbf{D}^H\right)\mathbf{U}^H.
+   \f \equiv \pr{\D^L-\D^H}\U^H \eqp
 \end{equation}
-Since $\mathbf{D}^L-\mathbf{D}^H(t)$ is symmetric
-and features zero row and column sums, a valid decomposition for $\mathbf{f}$,
-called $\mathbf{F}$, is
+Since $\D^L-\D^H$ is symmetric
+and features zero row and column sums, a valid decomposition for $\f$,
+called $\F$, is
 \begin{equation}
-   F_{i,j} = \left(D_{i,j}^L-D_{i,j}^H\right)\left(U_j^H - U_i^H\right).
+   F\ij = \pr{D\ij^L-D\ij^H}\pr{U_j^H - U_i^H} \eqp
 \end{equation}
