--- a/transport/doc/FCT_notes/newcommands.tex
+++ b/transport/doc/FCT_notes/newcommands.tex
@@ -1,13 +1,25 @@
+\newcommand{\pr}[1]{\left(#1\right)}
 \newcommand{\tab}{\hspace*{0.5cm}}
 \newcommand{\eqp}{\,.}
 \newcommand{\eqc}{\,,}
+
 \newcommand{\U}{\mathbf{U}}
 \newcommand{\A}{\mathbf{A}}
+\newcommand{\B}{\mathbf{B}}
 \newcommand{\D}{\mathbf{D}}
 \newcommand{\M}{\mathbf{M}}
 \newcommand{\F}{\mathbf{F}}
-\renewcommand{\L}{\mathcal{L}}
+\renewcommand{\L}{\mathbf{L}}
 \renewcommand{\b}{\mathbf{b}}
 \renewcommand{\r}{\mathbf{r}}
+\newcommand{\f}{\mathbf{f}}
 \newcommand{\s}{\mathbf{s}}
 \newcommand{\dt}{\Delta t}
+
+\newcommand{\ddt}[1]{\frac{d#1}{dt}}
+
+\renewcommand{\ij}{_{i,j}}
+\newcommand{\sumj}{\sum\limits_j}
+\newcommand{\sumjnoti}{\sum\limits_{j\ne i}}
+
+\newcommand{\LF}{\L\cdot\F}
