--- a/transport/doc/FCT_notes/content/explicit_Q.tex
+++ b/transport/doc/FCT_notes/content/explicit_Q.tex
@@ -7,7 +7,7 @@
    \begin{equation}\label{explicitFCT}
       \mathbf{M}_L\frac{\mathbf{U}^{n+1}-\mathbf{U}^n}{\Delta t}
          + \mathbf{A}^L\mathbf{U}^n
-         = \mathbf{b}^n + \mathcal{L}[\mathbf{F}],
+         = \mathbf{b}^n + \LF \eqc
    \end{equation}
    the following limited flux bounds $Q_i^\pm$ correspond to the discrete
    maximum principle $W_i^+\le U_i^{n+1}\le W_i^-$:
@@ -22,11 +22,11 @@
    \[
       m_i\frac{U_i^{n+1}-U_i^n}{\Delta t}
       + \sum\limits_j A_{i,j}^L U_j^n
-      = b_i^n + \sum\limits_j\mathcal{L}_{i,j}F_{i,j}.
+      = b_i^n + \sum\limits_j L_{i,j}F_{i,j}.
    \]
-   Solving for $\sum\limits_j\mathcal{L}_{i,j}F_{i,j}$ gives
+   Solving for $\sum\limits_j L_{i,j}F_{i,j}$ gives
    \[
-      \sum\limits_j\mathcal{L}_{i,j}F_{i,j} =
+      \sum\limits_j L_{i,j}F_{i,j} =
       m_i\frac{U_i^{n+1}-U_i^n}{\Delta t}
       + \sum\limits_j A_{i,j}^L U_j^n
       - b_i^n.
@@ -50,6 +50,6 @@
    \]
    which by substituting equations above gives
    \[
-      Q_i^-\le\sum\limits_j \mathcal{L}_{i,j}F_{i,j}\le Q_i^+.\qed
+      Q_i^-\le\sum\limits_j L_{i,j}F_{i,j}\le Q_i^+.\qed
    \]
 \end{proof}
