--- a/transport/doc/FCT_notes/content/steadystate_Q.tex
+++ b/transport/doc/FCT_notes/content/steadystate_Q.tex
@@ -18,11 +18,11 @@
    Starting with row $i$ of Equation \eqref{FCT_limited_ss},
    \[
       \sum\limits_j A_{i,j}^L U_j
-      = b_i + \sum\limits_j\mathcal{L}_{i,j}F_{i,j}.
+      = b_i + \sum\limits_j L_{i,j}F_{i,j}.
    \]
-   Solving for $\sum\limits_j\mathcal{L}_{i,j}F_{i,j}$ gives
+   Solving for $\sum\limits_j L_{i,j}F_{i,j}$ gives
    \[
-      \sum\limits_j\mathcal{L}_{i,j}F_{i,j} =
+      \sum\limits_j L_{i,j}F_{i,j} =
       \sum\limits_j A_{i,j}^L U_j
       - b_i.
    \]
@@ -39,6 +39,6 @@
    \]
    which by substituting equations above gives
    \[
-      Q_i^-\le\sum\limits_j \mathcal{L}_{i,j}F_{i,j}\le Q_i^+.\qed
+      Q_i^-\le\sum\limits_j L_{i,j}F_{i,j}\le Q_i^+.\qed
    \]
 \end{proof}
