--- a/transport/doc/research_timeline/research_timeline.tex
+++ b/transport/doc/research_timeline/research_timeline.tex
@@ -1,4 +1,11 @@
 \documentclass{report}
+\setlength{\oddsidemargin}{0in}
+\setlength{\evensidemargin}{0in}
+\setlength{\topmargin}{0in}
+\setlength{\headsep}{0in}
+\setlength{\headheight}{0in}
+\setlength{\textheight}{9in}
+\setlength{\textwidth}{6.5in}
 \begin{document}
 
 \begin{tabular}{l l}\hline
